force-app/main/default/objects/Contact/fields/Daily_case_assign_limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_case_assign_limit__c</fullName>
    <label>Daily case assign limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>