force-app/main/default/objects/Contact/fields/FOS__c.field-meta.xml
<CustomField>
    <fullName>FOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOS</label>
    <type>Checkbox</type>
</CustomField>