force-app/main/default/objects/Contact/fields/In_Active_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Active_Till_Date__c</fullName>
    <label>In Active Till Date</label>
    <type>Date</type>
</CustomField>