force-app/main/default/objects/Contact/fields/is_FOS_Agent__c.field-meta.xml
<CustomField>
    <fullName>is_FOS_Agent__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;FOS&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is FOS Agent</label>
    <type>Checkbox</type>
</CustomField>