force-app/main/default/objects/Contact/fields/Last_Case_Assign__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Assign__c</fullName>
    <label>Last Case Assign</label>
    <type>DateTime</type>
</CustomField>