force-app/main/default/objects/Contact/fields/Maximum_Cash_Collection_Limit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Cash_Collection_Limit__c</fullName>
    <defaultValue>50000</defaultValue>
    <label>Maximum Cash Collection Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>