force-app/main/default/objects/Contact/recordTypes/FOS.recordType-meta.xml
<RecordType>
    <fullName>FOS</fullName>
    <active>true</active>
    <label>FOS</label>
</RecordType>