force-app/main/default/objects/Contact/validationRules/PAN_Card_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Card_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &quot;IndustriesBusiness&quot;,
        RecordType.DeveloperName = &quot;IndustriesIndividual&quot;
    ),
    NOT(
        OR(
            ISBLANK(PAN__c),
            REGEX(PAN__c, &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>PAN__c</errorDisplayField>
    <errorMessage>Invalid PAN Card , Please Enter Again</errorMessage>
</ValidationRule>