force-app/main/default/objects/Contact/validationRules/Pincode_Required_When_FOS.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Required_When_FOS</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName!=&apos;FOS&apos;,ISBLANK(MailingPostalCode))</errorConditionFormula>
    <errorMessage>Mailing Code Required.</errorMessage>
</ValidationRule>