force-app/main/default/objects/Contact/validationRules/Pincode_Required_When_Not_FOS.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Required_When_Not_FOS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName!=&apos;FOS&apos;,ISBLANK(MailingPostalCode))</errorConditionFormula>
    <errorMessage>Mailing Code Required When Contact Is Not of FOS Type</errorMessage>
</ValidationRule>