force-app/main/default/objects/Contact/listViews/All_Customers.listView-meta.xml
<ListView>
    <fullName>All_Customers</fullName>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers</label>
</ListView>