force-app/main/default/objects/Contact/listViews/All_FOS_Contacts.listView-meta.xml
<ListView>
    <fullName>All_FOS_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.FOS</value>
    </filters>
    <label>All FOS Agents</label>
</ListView>